2008-10-22 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/istar/cone/*: Added iphone cone search stubs for monitor project
	
	* bin/user_agent.pl: Changed endpoint for FTN
	
	* bin/test_servers_gsm.pl: Changed endpoint for FTN
	
2008-08-29 Alasdair Allan <aa@astro.ex.ac.uk>

	* Changes for the new FTS node agent endpoint

2008-08-26 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/node_agent.pl & eSTAR/Util.pm: Fixes for DC3
	
2008-08-21 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_sky/event_client.pl: Fixes for $name
	
2008-07-10 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/Broker/Handler.pm & bin/event_broker.pl: Caught rogue
	  <Transport role="utility"> messages (originating from VO-GCN)
	  before they could do much harm.

2008-07-09 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/Broker/Handler.pm: Bug fix for GCN broken messages
	
2008-06-13 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/ogle_parsemail.pl: Added SMS alerts for ANOMALY events on OGLE 
	  EWS mailings
	
	* bin/test_server_gsm.pl Added Twitter and email to status polling

	* Infrastructure changes to support all of that.
	
2008-06-09 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/single.cgi, performance.cgi, graphs.cgi, status.cgi
	  & scoring.cgi: Fixed to handle new LT node agent endpoint.
	  
	* bin/test_servers*: Moved LT endpoint.  

2008-05-30 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/*: Fixes for iPod stuff
	
	* www/istar/*: Just dpon't ask!
	
	* eSTAR/Observation.pm: Fixes for non-scored observation requests
	
	* eSTAR/UA/Handler.pm: Fixed all_telescopes() so it doesn't score.

2008-05-29 Alasdair Allan <aa@astro.ex.ac.uk>

        * Massive changes to www/istar/* and www/robonet-1.0/*

	* eSTAR/UA/Handler.pm: Added node message to QUEUED OK. This is
	  going to break lots of stuff I've forgotten about I think?
	
2008-05-28 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_bridge.pl: Bridges event messages from a vanilla TCP 