@@ -1,0 +1,29 @@
+package eSTAR::UA::Util;
+
+use strict;
+use warnings;
+
+require Exporter;
+
+use vars qw/$VERSION @EXPORT_OK @ISA /;
+
+use DateTime;
+use Data::Dumper;
+use Storable;
+use Digest::MD5 'md5_hex';
+use Fcntl qw(:DEFAULT :flock);
+use Config::Simple;
+use Config::IniFiles;
+use eSTAR::Constants qw /:all/;
+use eSTAR::Logging;
+use eSTAR::Process;
+use eSTAR::Config;
+use eSTAR::Error qw /:try/;
+
+@ISA = qw/Exporter/;
+@EXPORT_OK = 
+      qw/  /;
+
+'$Revision: 1.1 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+
+1;
